# sudoku_wasm

./: Cargo.toml  README.md  build.ps1
solver/: Cargo.toml  README.md
solver-wasm/: Cargo.toml  README.md
solver-wasm/src/: lib.rs
solver/benches/: solve_benchmark.rs
solver/src/: lib.rs
solver/tests/: integration_test.rs
web/: index.html  serve.py
