[package]
name = "solver"
version = "0.1.0"
authors = ["Peter Eliasson <warackta@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.5.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "solve_benchmark"
harness = false
